contrast fix

--- a/src/components/molecules/button.module.scss
+++ b/src/components/molecules/button.module.scss
@@ -114,7 +114,7 @@ $button-height: 31px;
 	Was $ts-red. Changed to satisfy contrast requirements.
 	https://app.contrast-finder.org/result.html?foreground=ff224a&background=white&ratio=4.5&isBackgroundTested=false&algo=Rgb&lang=en
 	*/
-	color: #E91742;
+	color: #e91742;
 }
 
 .super,
