--- a/src/components/molecules/mininav.module.scss
+++ b/src/components/molecules/mininav.module.scss
@@ -17,7 +17,11 @@
 	text-transform: uppercase;
 	cursor: pointer;
 	&:hover {
-		color: $ts-red;
+		/*
+		Was $ts-red. Changed to satisfy contrast requirements.
+		https://app.contrast-finder.org/result.html?foreground=ff224a&background=white&ratio=4.5&isBackgroundTested=false&algo=Rgb&lang=en
+		*/
+		color: #e91742;
 	}
 }
 .miniNav {
